Fix font sizes in figures

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -695,7 +695,7 @@ Figure \ref{fig:Preston30Day4} presents the mean diurnal pattern for each compon
 
 \begin{figure}[!htbp] 
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{images/Pr04Val-EnergyBalanceOverallAve4Plots_.png}
-\caption{(TODO MAKE FONTS BIGGER) Pr04Val run 30 day hourly average VTUF-3D flux comparisons to Preston flux observations for the period 10 February-10 March 2004, with error bars at standard deviations. \label{fig:Preston30Day4} }     
+\caption{Pr04Val run 30 day hourly average VTUF-3D flux comparisons to Preston flux observations for the period 10 February-10 March 2004, with error bars at standard deviations. \label{fig:Preston30Day4} }     
 \end{figure}
 
 
@@ -709,7 +709,7 @@ In terms of absolute values, in 30 day monthly hourly averages, peaking daily va
 
 \begin{figure}[!htbp]
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{images/Pr04Val-ErrorPlots.png}
-\caption{(TODO MAKE FONTS BIGGER) Pr04Val scenario modelled vs. observations for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ fluxes for the period 10 February-10 March 2004. \label{fig:Preston6error}}   
+\caption{Pr04Val scenario modelled vs. observations for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ fluxes for the period 10 February-10 March 2004. \label{fig:Preston6error}}   
 \end{figure}
 
 %Individual fluxes ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$) were aggregated into hourly averages over the 30 days and compared to the observations (Figure \ref{fig:Preston30Day4}). VTUF-3D is able to reproduce the important dynamics of this area, driven by the fluxes. In the observations, the $Q_{H}$ and $Q_{G}$ fluxes dominate the urban area, with modest amounts of $Q_{E}$ fluxes, peaking under 100W m$^{-2}$ during the daytime and falling to roughly zero at night-time. 
@@ -761,7 +761,7 @@ Figure \ref{fig:Prestonnoveg30day} presents a 30 day hourly average of both the 
 
 \begin{figure}[!htbp]
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{images/Pr04NoVeg-ErrorPlots.png}
-\caption{(TODO REPLACE THIS WITH THE CORRECT FIGURE) Pr04NoVeg scenario modelled vs. observations for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ fluxes for the period 10 February-10 March 2004. \label{fig:Prestonnovegerror}}    
+\caption{Pr04NoVeg scenario modelled vs. observations for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ fluxes for the period 10 February-10 March 2004. \label{fig:Prestonnovegerror}}    
 \end{figure}
 
 
