--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -217,7 +217,7 @@ As the simulation proceeds through each timestep, an energy balance is performed
 For latent energy fluxes ($Q_{E}$), $Q_{E,veg}$ is the value for the grid square calculated in the MAESPA tree calculations, loaded from the MAESPA data for the individual item of vegetation and accompanying soil. Physiological processes and the water balance are modelled by MAESPA supporting the soil-plant-atmosphere continuum. Stomatal conductance within the vegetation uses MAESPA components based on the widely used Ball-Berry type approach \citep{Ball1987,Duursma2012}. Options are available to use a number of variations including: the Ball-Berry model \citep{Ball1987}, the Ball-Berry-Leuning model \citep{Leuning1995}, the Ball-Berry-Opti model \citep{Medlyn2011}, the Tuzet model \citep{Tuzet2003}. The use of this stomatal conductance approach requires more detailed parameters than the `Big Leaf' stomatal resistance scheme \citep{Bailey1981,Kowalczyk1991} which only provides a canopy-wide average. This allows precise modelling of individual species and specimens of vegetation, accounting for variations of vegetation type, canopy size, and vegetation health \citep{Duursma2012}. Each individually modelled element of vegetation can be placed precisely in a modelling domain scenario.
 
 
-Finally, canopy transpiration and leaf temperature for a MAESPA tile is calculated using an iterative scheme based on \cite{Wang1998}. An initial assumption is made that leaf surface temperatures are equal to the air temperature. $E_{L}$, leaf level transpiration rate ($\mu$mol m$^{-2}$s$^{-1}$) is calculated to find $\Psi_{L}$, the leaf water potential ($MPa$) (i.e. solving the Tuzet variation of the Ball-Berry stomatal conductance). $g_{B}$, the boundary layer conductance (mol m$^{-2}$s$^{-1}$), and $g_{V}$, the total conductance to water vapour (mol m$^{-2}$s$^{-1}$), are calculated using \cite{Jones1992}, while photosynthesis is calculated using \cite{Farquhar1980}. Next, the Penman-Monteith equation \citep{Penman1948,Monteith1965} is applied to each grid point (to account for variations due to sunlit and shaded portions of the canopy) and summed over all the grid points to calculate transpiration. Finally, leaf temperature is found by iteratively closing the energy balance of the leaf, based on \cite{Wang1998}. If the leaf temperature has converged (within a defined range of previous leaf temperatures), the process ends, otherwise these steps repeat until convergence is reached. See \cite{Duursma2012,Medlyn2007} for complete details.
+Canopy transpiration and leaf temperature for a MAESPA tile is calculated using an iterative scheme based on \cite{Wang1998}. An initial assumption is made that leaf surface temperatures are equal to the air temperature. $E_{L}$, leaf level transpiration rate ($\mu$mol m$^{-2}$s$^{-1}$) is calculated to find $\Psi_{L}$, the leaf water potential ($MPa$) (i.e. solving the Tuzet variation of the Ball-Berry stomatal conductance). $g_{B}$, the boundary layer conductance (mol m$^{-2}$s$^{-1}$), and $g_{V}$, the total conductance to water vapour (mol m$^{-2}$s$^{-1}$), are calculated using \cite{Jones1992}, while photosynthesis is calculated using \cite{Farquhar1980}. Next, the Penman-Monteith equation \citep{Penman1948,Monteith1965} is applied to each grid point (to account for variations due to sunlit and shaded portions of the canopy) and summed over all the grid points to calculate transpiration. Finally, leaf temperature is found by iteratively closing the energy balance of the leaf, based on \cite{Wang1998}. If the leaf temperature has converged (within a defined range of previous leaf temperatures), the process ends, otherwise these steps repeat until convergence is reached. See \cite{Duursma2012,Medlyn2007} for complete details.
 
 
 
